// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button block 1`] = `
<button
  aria-disabled="false"
  class="za-button za-button--default za-button--md za-button--radius za-button--block"
  role="button"
  type="button"
>
  <span>
    foo
  </span>
</button>
`;

exports[`Button disabled 1`] = `
<button
  aria-disabled="true"
  class="za-button za-button--default za-button--md za-button--radius za-button--disabled"
  role="button"
  type="button"
>
  <span>
    foo
  </span>
</button>
`;

exports[`Button ghost 1`] = `
<button
  aria-disabled="false"
  class="za-button za-button--default za-button--md za-button--radius za-button--ghost"
  role="button"
  type="button"
>
  <span>
    foo
  </span>
</button>
`;

exports[`Button href and target 1`] = `
<a
  aria-disabled="false"
  class="za-button za-button--default za-button--md za-button--radius za-button--link"
  href="https://zarm.design"
  role="button"
  target="__blank"
>
  <span>
    foo
  </span>
</a>
`;

exports[`Button htmlType 1`] = `
<button
  aria-disabled="false"
  class="za-button za-button--default za-button--md za-button--radius"
  role="button"
  type="submit"
>
  <span>
    foo
  </span>
</button>
`;

exports[`Button icon 1`] = `
<button
  aria-disabled="false"
  class="za-button za-button--default za-button--md za-button--radius"
  role="button"
  type="button"
>
  <div
    class="za-button__content"
  >
    <img
      alt=""
      src="https://zarm.design/images/logo.ce68565d.svg"
    />
    <span>
      foo
    </span>
  </div>
</button>
`;

exports[`Button loading 1`] = `
<button
  aria-disabled="false"
  class="za-button za-button--default za-button--md za-button--radius"
  role="button"
  type="button"
>
  <div
    class="za-button__content"
  >
    <span
      class="za-activity-indicator za-activity-indicator__circular--loading"
    >
      <svg
        class="za-activity-indicator__circular"
        viewBox="31 31 62 62"
      >
        <circle
          cx="62"
          cy="62"
          fill="none"
          r="28.5"
          style="stroke-width:5"
        />
      </svg>
    </span>
    <span>
      foo
    </span>
  </div>
</button>
`;

exports[`Button renders correctly 1`] = `
<button
  aria-disabled="false"
  class="za-button za-button--default za-button--md za-button--radius"
  role="button"
  type="button"
>
  <span>
    foo
  </span>
</button>
`;

exports[`Button shape is radius 1`] = `
<button
  aria-disabled="false"
  class="za-button za-button--default za-button--md za-button--radius"
  role="button"
  type="button"
>
  <span>
    foo
  </span>
</button>
`;

exports[`Button size 1`] = `
<button
  aria-disabled="false"
  class="za-button za-button--default za-button--lg za-button--radius"
  role="button"
  type="button"
>
  <span>
    foo
  </span>
</button>
`;

exports[`Button theme 1`] = `
<button
  aria-disabled="false"
  class="za-button za-button--primary za-button--md za-button--radius"
  role="button"
  type="button"
>
  <span>
    foo
  </span>
</button>
`;
